--- a/src/components/home/contact_section/ContactSection.module.css
+++ b/src/components/home/contact_section/ContactSection.module.css
@@ -2,7 +2,6 @@
 .contact__section {
     display: flex;
     flex-direction: column;
-    padding: 0 20px;
     text-align: center; 
   }
   
@@ -17,10 +16,6 @@
 
   /* Media query for tablets and larger screens */
   @media (min-width: 481px) {
-    .contact__section {
-      padding: 0 40px;
-    }
-  
     .contact__section__image {
       max-width: 451px; 
       max-height: 362px;
@@ -30,7 +25,6 @@
   /* Media query for large screens */
   @media (min-width: 769px) {
     .contact__section {
-      padding: 0 60px;
       text-align: left;
     }
   }
