--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -32,7 +32,7 @@ body {
 
 /*Secondary Section(About, Packages, Contact, Testimonials)*/
 .secondary-section-main {
-  background-image: url('../assets/images/Galaxy_Night.webp'); 
+  background-image: url('../assets/images/Milky_Way.webp'); 
   background-size: cover;
   background-position: center;
   min-height: 100vh;
